--- a/test/unit/views-a11y.html
+++ b/test/unit/views-a11y.html
@@ -26,14 +26,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="../../node_modules/wct-mocha/wct-mocha.js"></script>
   </head>
   <body>
-    <test-fixture id="home">
+    <test-fixture id="predict">
       <template>
-        <classifier-home active></classifier-home>
+        <classifier-predict active></classifier-predict>
       </template>
     </test-fixture>
-    <test-fixture id="about">
+    <test-fixture id="feedback">
       <template>
-        <classifier-about active></classifier-about>
+        <classifier-feedback active></classifier-feedback>
       </template>
     </test-fixture>
     <test-fixture id="view404">
@@ -46,18 +46,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       import '@polymer/test-fixture';
       import 'axe-core/axe.min.js';
       import {axeReport} from 'pwa-helpers/axe-report.js';
-      import '../../src/components/classifier-home.js';
-      import '../../src/components/classifier-about.js';
+      import '../../src/components/classifier-predict.js';
+      import '../../src/components/classifier-feedback.js';
       import '../../src/components/classifier-view404.js';
 
       suite('views a11y tests', function() {
-        test('classifier-home', function() {
-          const el = fixture('home');
+        test('classifier-predict', function() {
+          const el = fixture('predict');
           return axeReport(el);
         });
 
-        test('classifier-about', function() {
-          const el = fixture('about');
+        test('classifier-feedback', function() {
+          const el = fixture('feedback');
           return axeReport(el);
         });
 
