--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Pneumonia Detector</title>
+    <title>CheXify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Web app that helps radiologists detect cases of Pneumonia using state-of-the-art AI.">
 
@@ -18,7 +18,7 @@
 
     <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Pneumonia Detector">
+    <meta name="application-name" content="CheXify">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -41,7 +41,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@username">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="classifier-app">
+    <meta property="og:site_name" content="chexify-app">
     <meta property="og:image" content="images/manifest/icon-144x144.png" />
 
     <link rel="preconnect" href="https://apis.google.com">
@@ -76,7 +76,7 @@
     </style>
   </head>
   <body>
-    <classifier-app appTitle="Pneumonia Detector"></classifier-app>
+    <chexify-app appTitle="CheXify"></chexify-app>
     <noscript>
       Please enable JavaScript to view this website.
     </noscript>
@@ -91,6 +91,6 @@
 
     <!-- Load webcomponents-loader.js to check and load any polyfills your browser needs -->
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script type="module" src="src/components/classifier-app.js"></script>
+    <script type="module" src="src/components/chexify-app.js"></script>
   </body>
 </html>
