--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -20,9 +20,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <script>
       WCT.loadSuites([
-        // Load 'classifier-predict.html' test suite, using native shadow dom
+        // Load 'chexify-predict.html' test suite, using native shadow dom
         'counter-element.html',
-        // Load 'classifier-predict.html' test suite, using shadydom
+        // Load 'chexify-predict.html' test suite, using shadydom
         'counter-element.html?wc-shadydom=true&wc-ce=true',
         'views-a11y.html',
         'views-a11y.html?wc-shadydom=true&wc-ce=true',
